--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="hero-banner">
 		<div class="wrapper">
-			<h4>Rich from <a href="https://taptapkaboom.com">Tap  Tap Kaboom</a> presents</h4>
+			<h4>Sarah from <a href="https://skillshare.com">Skillshare</a> presents</h4>
 			<h1>The Silliest &amp;<br/>
 				Most Awesome Gang<br/>
 				In The World!</h1>
@@ -66,7 +66,7 @@
 	<img src="img/the-gang.png" width="735" height="399" alt="The Gang">
 
 	<footer>
-		Made by Rich from <a href="https://taptapkaboom.com">Tap Tap Kaboom</a>
+		Made by Sarah from <a href="https://skillshare.com">Skillshare</a>
 	</footer>
 
 	<div clas="popup">
