--- a/index.html
+++ b/index.html
@@ -44,34 +44,36 @@
 	<div class="sep"></div>
 
 	<div class="story" id="story">
-	<div class="nb-list">
-		<ul class="nb-list">
-			<li class="blue">Rock 'n Roll</li>
-			<li class="gray">&nbsp;</li>
-			<li class="yellow dragging">Laughter</li>
-			<li class="red">Square Offs</li>
-			<li class="pink">Circuitous Routes</li>
-			<li class="salmon">Trigonometry</li>
-			<li class="blue">Rad Hats</li>
-			<li class="yellow">Being Silly</li>
-		</ul>
-		<h3>Left: Things We Find Important<br/>
+		<div class="wrapper">
+			<ul class="nb-list">
+				<li class="blue">Rock 'n Roll</li>
+				<li class="gray">&nbsp;</li>
+				<li class="yellow dragging">Laughter</li>
+				<li class="red">Square Offs</li>
+				<li class="pink">Circuitous Routes</li>
+				<li class="salmon">Trigonometry</li>
+				<li class="blue">Rad Hats</li>
+				<li class="yellow">Being Silly</li>
+			</ul>
+			<h3>Left: Things We Find Important<br/>
 			Below: Our Story</h3>
-		<p>Once upon a time there was a group of shapes. They were mostly black and rectangular. They were mean and serious.</p>
-		<p>And so they kicked the 3 shapes that didn't conform out of their gang, which was called the Right Angled Gang.</p>
-		<p>And so these 3 shapes were very sad, but found great joy and comfort being around each other. They soon started having a lot of fun, started rocking and rolling, started being silly, and became the most well-known shape gang in the universe.</p>
-		<p>They even started making fun of squares and rectangles in what they like to call 'Square Offs'!</p>
-
+			<p>Once upon a time there was a group of shapes. They were mostly black and rectangular. They were mean and very serious.</p>
+			<p>And so they kicked the 3 shapes that didn’t conform out of their gang, which was called the Right Angled Gang.</p>
+			<p>And so these 3 shapes were very sad, but found great joy and comfort being around each other. They soon started having a lot of fun, started rocking and rolling, started being silly, and became the most well-known shape gang in the universe.</p>
+			<p>They even started making fun of squares and rectangles in what they like to call ‘Square Offs’!</p>
+		</div>
 	</div>
 
 	<div class="sep"></div>
-	<img src="img/the-gang.png" width="735" height="399" alt="The Gang">
+	<img class="gang-img" src="img/the-gang.png" width="735" height="399" alt="The Gang">
 
 	<footer>
-		Made by Sarah from <a href="https://skillshare.com">Skillshare</a>
+		<div class="wrapper">
+			Made by Sarah from <a href="https://skillshare.com">Skillshare</a>
+		</div>
 	</footer>
 
-	<div clas="popup">
+	<div class="popup">
 		<div class="blanket"></div>
 		<div class="content">
 			<h2>Fill In Your Details</h2>
